a1/brendan_gordon/TEST_PROGRAMS/invalidtype/dongkyu_kim/error2.min
# operation between incompatible types

var x: int;
var y: string;

y = y + x;

print y;

